<resources>
    <!--facebook api-->
    <!--<string name="facebook_app_id">942325942577010</string>-->
    <!--<string name="fb_login_protocol_scheme">fb942325942577010</string>-->

    <string name="facebook_app_id">1603100136407243</string>
    <string name="fb_login_protocol_scheme">fb1603100136407243</string>
    <!--hailer news-->
    <string name="app_name">傳聲筒</string>
    <string name="news">新聞</string>
    <string name="news_detail">新聞詳情</string>
    <string name="advice_check_internet">網絡連線不可用，請檢查網路</string>

    <!--login-->
    <string name="facebook_login">Facebook登錄</string>
    <string name="facebook_logout">Facebook登出</string>
    <string name="login_to_post">登錄後立即暢談</string>

    <!--Version-->
    <string name="find_new_version">發現新版本:V</string>

    <!--channel-->
    <string name="my_channel">我的頻道</string>
    <string name="enter_channel">點擊進入頻道</string>
    <string name="sort_channel">長按拖動進行排序</string>
    <string name="edit">編輯</string>
    <string name="complete">完成</string>
    <string name="more_channel">更多頻道</string>
    <string name="add_channel">點擊添加頻道</string>
    
    <!--comment-->
    <string name="news_comment">文章評論</string>
    <string name="post_comment">發佈</string>
    <string name="post_comment_msg">發表評論...</string>


    <!--feedback-->
    <string name="contract_us">聯繫我們</string>
    <string name="email_address">郵箱</string>
    <string name="email_address_example">1234@gmail.com</string>
    <string name="feedback">反饋意見</string>
    <string name="submit">提交</string>
    <string name="close">關閉</string>
    <string name="feedback_success">感謝您的反饋，我們的工作人員會儘快對您的反饋做出回覆，感謝您對傳聲筒的支持。</string>

    <!--toast -->
    <string name="refresh_success">已更新</string>
    <string name="retry">點擊重試</string>
    <string name="all_loaded">已加載所有</string>
    <string name="load_more_error">加載更多失敗</string>
    <string name="data_error">數據異常</string>
    <string name="exit_msg">再按一次退出程序</string>
    <string name="unknow_error">未知錯誤</string>
    <string name="send_uccess">發送成功</string>
    <string name="comment_is_null">評論內容不能爲空</string>
    <string name="net_error">網絡連線不可用，請檢查網絡</string>
    <string name="no_app">沒有此APP</string>

    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="message">Messager</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="cancel">取消</string>
    <string name="tv_no_more_data">沒有更多數據了</string>
    <string name="my_channel_tips">點擊進入頻道</string>
    <string name="channel_delete_tips">刪除符號</string>
    <string name="update">更新</string>
    <string name="cant_less_channel">頻道不能少於三個</string>


    <string-array name="news_channel">

        <!--定死不能更改的三个频道-->
        <item>即時</item>
        <item>科技</item>
        <item>體育</item>
        <item>財經</item>
        <item>汽車</item>

        <item>娛樂</item>
        <item>社會</item>
        <item>軍事</item>
        <item>育兒</item>
        <item>國際</item>

        <item>旅遊</item>
        <item>時尚</item>
        <item>美食</item>
        <item>健康</item>
        <item>搞笑</item>

        <item>文化</item>
        <item>其他</item>
    </string-array>

    <string-array name="news_channel_slug">
        <item>toutiao</item>
        <item>tech</item>
        <item>sports</item>
        <item>finance</item>
        <item>car</item>

        <item>entertainment</item>
        <item>society</item>
        <item>military</item>
        <item>baby</item>
        <item>world</item>

        <item>travel</item>
        <item>fashion</item>
        <item>food</item>
        <item>health</item>
        <item>funny</item>

        <item>culture</item>
        <item>other</item>

    </string-array>




</resources>