<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:gravity="center_vertical"
    android:background="@color/light_gray">


    <TextView
        android:id="@+id/channel_classification_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:maxLines="1"
        android:text="@string/my_channel"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/channel_classification_tv"
        android:layout_alignBottom="@+id/channel_classification_tv"
        android:layout_marginLeft="15dp"
        android:textSize="12sp"
        android:maxLines="1"
        android:text="@string/my_channel_tips"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tv_edit_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textSize="17sp"
        android:text="@string/edit"
        android:textColor="@color/colorTextNotNull"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:background="@drawable/shape_stroke_red"
        tools:ignore="RelativeOverlap,RtlHardcoded" />

</RelativeLayout>
